--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,6 +36,15 @@ allprojects {
                 excludeGroup "com.facebook.react"
             }
         }
+        mavenLocal()
+        jcenter()
+        maven { url "$rootDir/../node_modules/react-native/android" }
+
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
+
+        // ADD THIS
+        maven { url "https://www.jitpack.io" }
         google()
         maven { url 'https://www.jitpack.io' }
     }
