--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.2",
     "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.3",
+    "react-native-fs": "^2.19.0",
+    "react-native-image-crop-picker": "^0.37.3",
+    "react-native-remix-icon": "^0.3.0",
     "react-native-safe-area-context": "^4.2.2",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
